fix(movie): improve validation, exception handling and service logic