@@ -5,6 +5,7 @@ import com.beyefendisinemaci.beyefendisinemaci.movie.dto.response.MovieResponseD
 import com.beyefendisinemaci.beyefendisinemaci.movie.entity.Movie;
 import com.beyefendisinemaci.beyefendisinemaci.movie.exception.DuplicateMovieException;
 import com.beyefendisinemaci.beyefendisinemaci.movie.exception.MovieNotFoundException;
+import com.beyefendisinemaci.beyefendisinemaci.movie.exception.TmdbIdMismatchException;
 import com.beyefendisinemaci.beyefendisinemaci.movie.mapper.MovieMapper;
 import com.beyefendisinemaci.beyefendisinemaci.movie.repository.MovieRepository;
 import lombok.RequiredArgsConstructor;
@@ -14,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,15 +24,11 @@ public class MovieService {
     private final MovieRepository repository;
 
     public Page<MovieResponseDto> getAllMovies(Pageable pageable) {
-        return repository.findAll(pageable)
-                .map(mapper::toResponseDto);
+        return repository.findAll(pageable).map(mapper::toResponseDto);
     }
 
     public List<MovieResponseDto> getMovieByTitle(String title) {
-        return repository.findByTitleContainingIgnoreCase(title)
-                .stream()
-                .map(mapper::toResponseDto)
-                .collect(Collectors.toList());
+        return repository.findByTitleContainingIgnoreCase(title).stream().map(mapper::toResponseDto).toList();
     }
 
     public MovieResponseDto getMovieById(UUID id) {
@@ -43,13 +39,15 @@ public class MovieService {
         if (repository.existsByTmdbId(movie.getTmdbId())) {
             throw new DuplicateMovieException(movie.getTmdbId());
         }
-
         return mapper.toResponseDto(repository.save(mapper.toEntity(movie)));
     }
 
-    // Find existing movie via id, update fields from updated movie
+
     public MovieResponseDto updateMovie(UUID id, MovieRequestDto updatedMovie) {
         Movie existingMovie = repository.findById(id).orElseThrow(() -> new MovieNotFoundException(id));
+        if (!updatedMovie.getTmdbId().equals(existingMovie.getTmdbId()))
+            throw new TmdbIdMismatchException(updatedMovie.getTmdbId());
+
         existingMovie.setTitle(updatedMovie.getTitle());
         existingMovie.setGenre(updatedMovie.getGenre());
         existingMovie.setPosterUrl(updatedMovie.getPosterUrl());
@@ -61,14 +59,12 @@ public class MovieService {
     }
 
     public void deleteMovieById(UUID id) {
+        repository.findById(id).orElseThrow(() -> new MovieNotFoundException(id));
         repository.deleteById(id);
     }
 
-    public List<MovieResponseDto> getRecentMovies () {
-        return repository.findTop6ByOrderByCreatedAtDesc()
-                .stream()
-                .map(mapper::toResponseDto)
-                .collect(Collectors.toList());
+    public List<MovieResponseDto> getRecentMovies() {
+        return repository.findTop6ByOrderByCreatedAtDesc().stream().map(mapper::toResponseDto).toList();
     }
 
 }
